--- a/English.lproj/ImportPatchesSheet.xib
+++ b/English.lproj/ImportPatchesSheet.xib
@@ -21,6 +21,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
+			<integer value="35"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -58,7 +59,7 @@
 				<string key="NSWindowContentMaxSize">{1.79769e+308, 1.79769e+308}</string>
 				<string key="NSWindowContentMinSize">{700, 500}</string>
 				<object class="NSView" key="NSWindowView" id="803546326">
-					<nil key="NSNextResponder"/>
+					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -103,15 +104,15 @@
 															</object>
 															<object class="NSMutableArray" key="NSTableColumns">
 																<bool key="EncodedWithXMLCoder">YES</bool>
-																<object class="NSTableColumn" id="246614912">
-																	<string key="NSIdentifier">author</string>
+																<object class="NSTableColumn" id="26508441">
+																	<string key="NSIdentifier">patchName</string>
 																	<double key="NSWidth">96</double>
 																	<double key="NSMinWidth">10</double>
 																	<double key="NSMaxWidth">3.4028234663852886e+38</double>
 																	<object class="NSTableHeaderCell" key="NSHeaderCell">
 																		<int key="NSCellFlags">75628096</int>
 																		<int key="NSCellFlags2">2048</int>
-																		<string key="NSContents">author</string>
+																		<string key="NSContents">name</string>
 																		<object class="NSFont" key="NSSupport" id="26">
 																			<string key="NSName">LucidaGrande</string>
 																			<double key="NSSize">11</double>
@@ -136,12 +137,11 @@
 																			</object>
 																		</object>
 																	</object>
-																	<object class="NSTextFieldCell" key="NSDataCell" id="120607869">
+																	<object class="NSTextFieldCell" key="NSDataCell" id="579947169">
 																		<int key="NSCellFlags">337772096</int>
 																		<int key="NSCellFlags2">133120</int>
 																		<string key="NSContents">Text Cell</string>
 																		<reference key="NSSupport" ref="26"/>
-																		<string key="NSPlaceholderString">author</string>
 																		<reference key="NSControlView" ref="930089966"/>
 																		<object class="NSColor" key="NSBackgroundColor" id="378967068">
 																			<int key="NSColorSpace">6</int>
@@ -164,9 +164,37 @@
 																	<bool key="NSIsEditable">YES</bool>
 																	<reference key="NSTableView" ref="930089966"/>
 																</object>
+																<object class="NSTableColumn" id="246614912">
+																	<string key="NSIdentifier">author</string>
+																	<double key="NSWidth">63</double>
+																	<double key="NSMinWidth">10</double>
+																	<double key="NSMaxWidth">3.4028234663852886e+38</double>
+																	<object class="NSTableHeaderCell" key="NSHeaderCell">
+																		<int key="NSCellFlags">75628096</int>
+																		<int key="NSCellFlags2">2048</int>
+																		<string key="NSContents">author</string>
+																		<reference key="NSSupport" ref="26"/>
+																		<reference key="NSBackgroundColor" ref="29310113"/>
+																		<reference key="NSTextColor" ref="822232783"/>
+																	</object>
+																	<object class="NSTextFieldCell" key="NSDataCell" id="120607869">
+																		<int key="NSCellFlags">337772096</int>
+																		<int key="NSCellFlags2">133120</int>
+																		<string key="NSContents">Text Cell</string>
+																		<reference key="NSSupport" ref="26"/>
+																		<string key="NSPlaceholderString">author</string>
+																		<reference key="NSControlView" ref="930089966"/>
+																		<reference key="NSBackgroundColor" ref="378967068"/>
+																		<reference key="NSTextColor" ref="1032412444"/>
+																	</object>
+																	<int key="NSResizingMask">3</int>
+																	<bool key="NSIsResizeable">YES</bool>
+																	<bool key="NSIsEditable">YES</bool>
+																	<reference key="NSTableView" ref="930089966"/>
+																</object>
 																<object class="NSTableColumn" id="178316439">
 																	<string key="NSIdentifier">date</string>
-																	<double key="NSWidth">65</double>
+																	<double key="NSWidth">61</double>
 																	<double key="NSMinWidth">10</double>
 																	<double key="NSMaxWidth">3.4028234663852886e+38</double>
 																	<object class="NSTableHeaderCell" key="NSHeaderCell">
@@ -194,7 +222,7 @@
 																</object>
 																<object class="NSTableColumn" id="701149115">
 																	<string key="NSIdentifier">commitMessage</string>
-																	<double key="NSWidth">365</double>
+																	<double key="NSWidth">321</double>
 																	<double key="NSMinWidth">10</double>
 																	<double key="NSMaxWidth">3.4028234663852886e+38</double>
 																	<object class="NSTableHeaderCell" key="NSHeaderCell">
@@ -222,7 +250,7 @@
 																</object>
 																<object class="NSTableColumn" id="315437596">
 																	<string key="NSIdentifier">parent</string>
-																	<double key="NSWidth">74</double>
+																	<double key="NSWidth">56</double>
 																	<double key="NSMinWidth">10</double>
 																	<double key="NSMaxWidth">3.4028234663852886e+38</double>
 																	<object class="NSTableHeaderCell" key="NSHeaderCell">
@@ -431,7 +459,7 @@
 													<reference key="NSSuperview" ref="597433057"/>
 													<reference key="NSTarget" ref="597433057"/>
 													<string key="NSAction">_doScroller:</string>
-													<double key="NSPercent">0.92021276595744683</double>
+													<double key="NSPercent">0.94584837545126355</double>
 												</object>
 												<object class="NSScroller" id="302581107">
 													<reference key="NSNextResponder" ref="597433057"/>
@@ -441,7 +469,7 @@
 													<int key="NSsFlags">1</int>
 													<reference key="NSTarget" ref="597433057"/>
 													<string key="NSAction">_doScroller:</string>
-													<double key="NSPercent">0.79819277108433739</double>
+													<double key="NSPercent">0.9974905897114178</double>
 												</object>
 												<object class="NSClipView" id="14183863">
 													<reference key="NSNextResponder" ref="597433057"/>
@@ -1059,6 +1087,7 @@
 						</object>
 					</object>
 					<string key="NSFrameSize">{837, 699}</string>
+					<reference key="NSSuperview"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
 				<string key="NSMinSize">{700, 522}</string>
@@ -1141,30 +1170,6 @@
 					<int key="connectionID">203</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
-						<string key="label">addPatches:</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="722233196"/>
-					</object>
-					<int key="connectionID">209</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">addPatchButton</string>
-						<reference key="source" ref="930089966"/>
-						<reference key="destination" ref="722233196"/>
-					</object>
-					<int key="connectionID">235</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">removePatchButton</string>
-						<reference key="source" ref="930089966"/>
-						<reference key="destination" ref="688509038"/>
-					</object>
-					<int key="connectionID">236</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">value: guessRenames</string>
 						<reference key="source" ref="280363264"/>
@@ -1245,14 +1250,6 @@
 					<int key="connectionID">249</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
-						<string key="label">removeSelectedPatches:</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="688509038"/>
-					</object>
-					<int key="connectionID">250</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">detailedPatchTextView</string>
 						<reference key="source" ref="930089966"/>
@@ -1267,6 +1264,22 @@
 						<reference key="destination" ref="1001"/>
 					</object>
 					<int key="connectionID">252</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">removeSelectedPatches:</string>
+						<reference key="source" ref="930089966"/>
+						<reference key="destination" ref="688509038"/>
+					</object>
+					<int key="connectionID">255</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">addPatches:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="722233196"/>
+					</object>
+					<int key="connectionID">257</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1533,6 +1546,7 @@
 							<reference ref="393992279"/>
 							<reference ref="667024187"/>
 							<reference ref="1042615095"/>
+							<reference ref="26508441"/>
 						</object>
 						<reference key="parent" ref="597433057"/>
 					</object>
@@ -1761,6 +1775,20 @@
 						<reference key="object" ref="977897011"/>
 						<reference key="parent" ref="78098906"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">253</int>
+						<reference key="object" ref="26508441"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="579947169"/>
+						</object>
+						<reference key="parent" ref="930089966"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">254</int>
+						<reference key="object" ref="579947169"/>
+						<reference key="parent" ref="26508441"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1806,6 +1834,7 @@
 					<string>230.IBPluginDependency</string>
 					<string>247.IBPluginDependency</string>
 					<string>248.IBPluginDependency</string>
+					<string>254.CustomClassName</string>
 					<string>34.IBEditorWindowLastContentRect</string>
 					<string>34.IBPluginDependency</string>
 					<string>34.IBWindowTemplateEditedContentRect</string>
@@ -1889,6 +1918,7 @@ dGVyLiAgKC0tc2ltaWxhcml0eSBvcHRpb24pA</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>PatchesTablePatchNameCell</string>
 					<string>{{10, 231}, {837, 699}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{{10, 231}, {837, 699}}</string>
@@ -1937,7 +1967,7 @@ dGVyLiAgKC0tc2ltaWxhcml0eSBvcHRpb24pA</string>
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">252</int>
+			<int key="maxID">257</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2030,20 +2060,20 @@ dGVyLiAgKC0tc2ltaWxhcml0eSBvcHRpb24pA</string>
 						<string key="NS.key.0">buttonMessage</string>
 						<string key="NS.object.0">NSTextField</string>
 					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="923789848">
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="1005929483">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/Sheets/ImportSheet/PatchesTableView.h</string>
+						<string key="minorKey">Classes/PatchesModel/PatchesTableView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">PatchesTableCell</string>
 					<string key="superclassName">NSTextFieldCell</string>
-					<reference key="sourceIdentifier" ref="923789848"/>
+					<reference key="sourceIdentifier" ref="1005929483"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">PatchesTableCommitMessageCell</string>
 					<string key="superclassName">PatchesTableCell</string>
-					<reference key="sourceIdentifier" ref="923789848"/>
+					<reference key="sourceIdentifier" ref="1005929483"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">PatchesTableCommitMessageCell</string>
@@ -2052,6 +2082,11 @@ dGVyLiAgKC0tc2ltaWxhcml0eSBvcHRpb24pA</string>
 						<string key="majorKey">IBUserSource</string>
 						<string key="minorKey"/>
 					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">PatchesTablePatchNameCell</string>
+					<string key="superclassName">PatchesTableCell</string>
+					<reference key="sourceIdentifier" ref="1005929483"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">PatchesTableView</string>
@@ -2077,20 +2112,16 @@ dGVyLiAgKC0tc2ltaWxhcml0eSBvcHRpb24pA</string>
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>addPatchButton</string>
 							<string>detailedPatchTextView</string>
 							<string>parentController</string>
-							<string>removePatchButton</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>NSButton</string>
 							<string>NSTextView</string>
 							<string>id</string>
-							<string>NSButton</string>
 						</object>
 					</object>
-					<reference key="sourceIdentifier" ref="923789848"/>
+					<reference key="sourceIdentifier" ref="1005929483"/>
 				</object>
 			</object>
 			<object class="NSMutableArray" key="referencedPartialClassDescriptionsV3.2+">
@@ -2516,6 +2547,20 @@ dGVyLiAgKC0tc2ltaWxhcml0eSBvcHRpb24pA</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">QuartzCore.framework/Headers/CIImageProvider.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">Sparkle.framework/Headers/SUAppcast.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">Sparkle.framework/Headers/SUUpdater.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
